# Visualizing-information-flow-in-transformers

./: .gitignore  CLAUDE.md  DECISIONS.md  PLAN.md  README.md  RECORD.md  package-lock.json  temp_answer.md
real/backend/: pyproject.toml
real/backend/src/api_checks/: api.py  api_cache.py  calculator_utils.py  custom_types.py  full_run_result.py  model.py  model_calculator.py  model_parmeters.py  position.py  result_cache.py  utils.py
real/backend/src/info_flow/: __init__.py  config.py  ex3_calc_full_contributions.py  ex5_better_percision_key_in_mat_calc.py  ex6_better_percision_key_in_mat_f32.py  math_calculate_full.py  math_warmap_cac_normal_res.py  precision_metric.py  test_full_contributions.py  test_full_contributions_sink_resistant.py  test_mlp.py  test_percision.py  test_warmup.py
real/backend/src/info_flow/archive/: ex2_math_calculate_full_attention.py  test_full_contribution_f32.py
real/backend/src/tests/scratchpad/: check_sae_lens.py  dimensions.md  rms_norm_notes.md  rope_cos_sin_dims.md  test_assert_in_trace.py  test_calc_post_rmsnorm2.py  test_compile_post_mlp.py  test_group_contributions.py  test_list_persist.py  test_softmax_dominate.py  toy_compile_check_warmap.py  toy_llama_atten_one_back.py  toy_llama_move_1_n_back.py  toy_llama_no_attention_no_ov.py  toy_llama_unit_embedding.py  (+1 more)
real/backend/tests/: debug_test.py
real/backend/tests/scratchpad/: inspect_attention_output_per_source.ipynb  layer31_mlp_investigation.md  repeat_test.py  test_compile_post_mlp.py  test_list_persist.py  test_outside_init.py  test_set_time.py  test_warmup_sanity.md  test_warmup_sanity.py  toy_compile_check.py  toy_compile_check_warmap.py  toy_llama.py  toy_llama_no_attention_no_ov.py  toy_matmul_down_proj.py
(+88 files in other folders)
