[project]
name = "info_flow"
version = "0.1.0"
description = "Per-source residual decomposition for Llama (frozen-QK + frozen-gate)."
requires-python = ">=3.11"
dependencies = [
    "nnsight>=0.4",
    "torch>=2.4",
    "transformers>=4.45",
    "accelerate>=0.34",
    "jaxtyping>=0.2",
    "einops>=0.8.2",
    "matplotlib>=3.10.9",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "pydantic-settings>=2.14.1",
    "polars>=1.41.2",
    "sae-lens>=5",
    "dash>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/info_flow", "src/api_checks", "src/tests"]

[tool.ruff]
line-length = 180

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
]
